# pysandbox

./: AGENTS.md  Makefile  README.md  pyproject.toml
src/coding_challenges/: README.md
src/coding_challenges/capitalize_strings/: README.md  main.py
src/coding_challenges/domino/: README.md  main.py
src/coding_challenges/minion_game/: README.md  main.py
src/coding_challenges/stump_duty_calculator/: README.md  main.py
src/coding_challenges/unique_permutations/: README.md  main.py
src/pysandbox/: capitalize_string.py  hello.py  simple_tokenizer.py  stump_duty_calculator.py
tests/: test_capitalize_string.py  test_hello.py  test_stump_duty_calculator.py
tests/coding_challenges/: test_capitalize_string.py  test_domino.py  test_minion_game.py  test_stump_duty_calculator.py  test_unique_permutations.py
tests/pysandbox/: test_simple_tokenizer.py
